--- a/chart.html
+++ b/chart.html
@@ -2,15 +2,22 @@
 <html lang="en">
     <head>
         <meta charset="utf-8"/>
-        <style></style>
+        <style>
+            .chart {
+                display: flex;
+                align-items: flex-start;
+            }
+        </style>
     </head>
     <body>
-        <div id="chart">
+        <div class="chart" id="chart">
         </div>
     </body>
     <footer>
         <script>
             var dico = [
+                { name: 'Am7',  fingers: '0,0,0,0' },
+                { name: 'Dm7',  fingers: '5,5,5,5' },
                 { name: 'C',  fingers: '0,0,0,3' },
                 { name: 'C',  fingers: '0,7,8,7' },
                 { name: 'C#',  fingers: '6,5,4,4' },
@@ -19,6 +26,7 @@
                 { name: 'Gsus2', fingers: '0,2,3,0' },
                 { name: 'E7', fingers: '1,2,0,2' },
                 { name: 'Ab', fingers: '4,2,3,2' },
+                { name: 'Fun', fingers: '0,1,3,10' },
                 { name: 'D7(#9)', fingers: '5,6,5,8' }
             ];
             var el = document.getElementById('chart');
