--- a/chart.html
+++ b/chart.html
@@ -17,6 +17,7 @@
         <script>
             var dico = [
                 { name: 'Am7',  fingers: '0,0,0,0' },
+                { name: 'A7',  fingers: '0,1,0,0' },
                 { name: 'Dm7',  fingers: '5,5,5,5' },
                 { name: 'C',  fingers: '0,0,0,3' },
                 { name: 'C',  fingers: '0,7,8,7' },
